# Test-code

./: .dockerignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
cli/: print-repos-info.py
docker/: Dockerfile
src/repo_reader_sancherepan/: branch.py  print_repos_info.py  repo_reader.py  repository.py
tests/: conftest.py  test_repository.py
tests/resources/orgs/docker/repos/: response.json
tests/resources/repos/docker/compose/branches/: response.json
tests/resources/repos/docker/docker-py/branches/: response.json
tests/resources/repos/docker/docs/branches/: response.json
